<resources>
    <string name="app_name">Community_Life</string>
    <string name="action_settings">Settings</string>
    <string name="category">Category</string>
    <string name="event">Event</string>

    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="add_an_activity">Add an Activity</string>
    <string name="add_activity">Add activity</string>

    <string-array name="category">

        <item>Sports</item>
        <item>Music</item>
        <item>Arts and Crafts</item>
        <item>Computers</item>
        <item>Food</item>
        <item>Learning</item>
        <item>Outdoors</item>

    </string-array>

</resources>
